<resources>
    <string name="app_name">Evaluation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="evaluation_app">Evaluation App</string>
    <string name="enter_your_name_hint">Enter your name</string>
    <string name="name_hint">Name</string>
    <string name="phone_hint">Phone</string>
    <string name="button_submit">Submit</string>
    <string name="button_add">Add</string>
    <string name="button_set">Set</string>
    <string name="button_back">Back</string>
    <string name="button_cancel">Set</string>
</resources>